--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.15",
     "@paypal/react-paypal-js": "^8.2.0",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "requirements": "^2.0.0"
   },
