--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@paypal/react-paypal-js": "^8.2.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "frontend": "file:",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
